--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "~1.7.0",
     "promisify": "0.0.3",
     "requestify": "latest",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "express-sslify": "latest"
   }
 }
